--- a/Week 4 Website/style.css
+++ b/Week 4 Website/style.css
@@ -4,19 +4,66 @@
   }
 
 body{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.4);
+    background-image: linear-gradient(315deg, #d9d9d9 0%, #f6f2f2 74%);
     font-family: "Nintendo";
-    color: white;
-    text-align: center;
+    color: black;
     font-size: 50px;
+    margin: none 100px;
+    
 }
+
+.background-clip{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+h1{
+    text-align: center;
+}
+
+.sidenav {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 160px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+    color: black;
+    background-color: #d9d9d9;
+  }
+
+.sidenav h5 {
+    text-align: center;
+}
+
 
 text{
     padding: 15%;
 }
-a{
+.resources a{
     text-decoration: none;
-    color: white; 
+    color: black;
+    display: flex;
+    justify-content: center;
+}
+
+.sidenav a{
+    text-decoration: none;
+    color: black; 
+    padding: 10px;
+    display: flex;
+    font-size: large;
+}
+
+h1 a{
+    text-decoration: none;
+    color: black;
+    font-size: 72px;
 }
 
 .grow { 
@@ -44,7 +91,7 @@ a{
 }
 
 .resources{
-    padding: 0%;
+    padding: 0% 30% 0% 30;
     display: inline;
 }
 
@@ -64,11 +111,43 @@ li{
     justify-content: center;
 }
 
-.Bookimages img{
-    height: 200px;
-    width: 200px;
-    display: flex;
-    align-content: flex-start;
-    flex-direction: column;
-    gap: 30px;
+.Bookimages{
+    display: block;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5%;
+    opacity: 0 ;
+    transition: all 1s;
+
 }
+.Bookimages img{
+    height: 500px;
+    width: 500px;
+    display: block;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5%;
+    transition: all 1s;
+
+}
+
+
+.show{
+    opacity: 1;
+}
+
+figcaption{
+    text-align: center;
+    font-size: 20px;
+}
+.foreword{
+    font-size: smaller;
+    text-align: center;
+}
+
+.foreword p{
+    padding: 100px;
+}
+
